# rust-universal-template

./: .gitignore  Cargo.toml  LICENSE  README.md  build-android.sh  build-run-java.sh  build.gradle  settings.gradle
.cargo/: config
.circleci/: config.yml
Example/: Example.h  Message.swift
Example.xcodeproj/: project.pbxproj
Example.xcodeproj/xcshareddata/xcschemes/: ExampleCore (iOS).xcscheme  ExampleCore (macOS).xcscheme  ExampleCore (tvOS).xcscheme  ExampleCore (watchOS).xcscheme  ExampleObjC (iOS).xcscheme  ExampleObjC (macOS).xcscheme  ExampleSwift (iOS).xcscheme  ExampleSwift (macOS).xcscheme  ExampleSwift (tvOS).xcscheme  ExampleSwift (watchOS).xcscheme  ExampleTests (iOS).xcscheme  ExampleTests (macOS).xcscheme  ExampleTests (tvOS).xcscheme  cargo (iOS).xcscheme  cargo (macOS).xcscheme
ExampleCore/: ExampleCore.h  empty.m
ExampleSwift/: Message.swift
ExampleTests/: ExampleTests.swift
Examples/Android/: settings.gradle
Examples/Android/app/: build.gradle
Examples/Java/HelloWorld/: Main.java
Examples/iOS/ExampleApp.xcodeproj/: project.pbxproj
Examples/iOS/Source/: AppDelegate.swift  (+1 more)
Rust.xcodeproj/: project.pbxproj
Rust.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Scripts/: create-ndk-standalone.sh  fake-ld-arm.sh  fake-ld-armv7.sh
Source/ExampleCore/: ExampleCore.h
Source/ExampleObjC/: ExampleObjC.h  RSTMessage.h  RSTMessage.m
Source/ExampleSwift/: ExampleSwift.h  Message.swift
Source/Java/: HelloWorld.java
Source/Rust/: example.h
Tests/: ExampleTests.swift
Tests/Java/: HelloWorldTest.java
src/: lib.rs
(+45 files in other folders)
