[workspace]
members = ["Source/Rust/generic", "Source/Rust/apple", "Source/Rust/java"]

[package]
name = "example-universal"
version = "0.1.0"
authors = ["Chris Ballinger <chrisballinger@gmail.com>"]

[lib]
name = "example"
path = "Source/Rust/universal/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
apple = ["example-apple"]
java = ["example-java"]

[profile.release]
debug = true

[dependencies]
example-generic = { path = "Source/Rust/generic" }
example-apple = { path = "Source/Rust/apple", optional = true }
example-java = { path = "Source/Rust/java", optional = true }
